# data-explorer-pharma

./: .dockerignore  .gitignore  .pre-commit-config.yaml  COLUMN_REFERENCE.md  Dockerfile  LICENSE  README.md  README.md.bak  generate_column_ref.py  generate_column_registry.py  pyproject.toml  rcsb_schema_hierarchy.md  schema_explorer.py
.github/workflows/: ci.yml
rcsb_pipeline/: __init__.py  __main__.py  cache.py  cli.py  column_registry.py  config.py  discovery.py  export.py  fetch.py  pipeline.py  registry.py  schema_loader.py  transform.py
rcsb_pipeline/presets/: drug_discovery.yaml  full.yaml  minimal.yaml  standard.yaml
tests/: conftest.py  test_cli.py  test_column_registry.py  test_discovery.py  test_fetch.py  test_pipeline.py  test_registry.py  test_schema_loader.py
