[project]
name = "rcsb-pipeline"
version = "0.1.0"
description = "RCSB PDB Pipeline — Fetch, transform, and export PDB structural data for drug target discovery"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Target Discovery Platform" },
]
license = { text = "Proprietary" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "rcsb-api>=1.7.0",
    "typer>=0.12.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "httpx>=0.27.0",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "openpyxl>=3.1.0",
    "rich>=13.0",
    "requests>=2.31.0",
]

[project.scripts]
rcsb-pipeline = "rcsb_pipeline.cli:app"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["rcsb_pipeline*"]
