[project]
name = "rcsb-pipeline"
version = "0.1.0"
description = "RCSB PDB Pipeline — Fetch, transform, and export PDB structural data for drug target discovery"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Target Discovery Platform" },
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "rcsb-api>=1.7.0",
    "typer>=0.12.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "httpx>=0.27.0",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "openpyxl>=3.1.0",
    "rich>=13.0",
    "requests>=2.31.0",
]

[project.scripts]
rcsb-pipeline = "rcsb_pipeline.cli:app"

[project.urls]
Homepage = "https://github.com/yourusername/data-explorer-pharma"
Repository = "https://github.com/yourusername/data-explorer-pharma"
Documentation = "https://github.com/yourusername/data-explorer-pharma#readme"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5.0",
    "mypy>=1.10",
    "pre-commit>=3.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["rcsb_pipeline*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["rcsb_pipeline"]
omit = ["*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "ARG"]
ignore = [
    "E501",  # line length handled by formatter
    "B904",  # raise-within-except — we need bare except for API resilience
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
warn_unused_ignores = true
